# Scrapo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LAYMAN.md  LICENSE  PLAN.md  README.md  SECURITY.md  TESTING.md  deep-research-report (1).md  layman.md  pyproject.toml
.github/workflows/: ci.yml
scrapo/: __init__.py  _db.py  api.py  cli.py  config.py  export.py  logging.py  results.py  security.py  sync.py  types.py  watch.py  web.py
scrapo/access/: __init__.py  action_cache.py  actions.py  agent_drivers.py  agent_tier.py  api_providers.py  browser_pool.py  browser_tier.py  http_tier.py  proxy_pool.py  router.py  signals.py
scrapo/access/adapters/: __init__.py  base.py  brightdata.py  oxylabs.py  scrapfly.py  zyte.py
scrapo/agent/: __init__.py  mcp_server.py  tool_schemas.py
scrapo/crawl/: __init__.py  batch.py  dedup.py  mapper.py  queue.py  scheduler.py  sitemap.py
scrapo/extract/: __init__.py  hybrid.py  metadata.py  pinning.py  schema.py  selector_cache.py
scrapo/extract/llm_adapters/: __init__.py  anthropic_adapter.py  base.py  deepseek_adapter.py  gemini_adapter.py  mock_adapter.py  openai_adapter.py  openai_compatible.py
scrapo/policy/: __init__.py  audit.py  geo.py  pii.py  robots.py
scrapo/replay/: __init__.py  diff.py  snapshots.py  store.py
scrapo/server/: __init__.py  notifier.py  scheduler.py  store.py
scrapo/shape/: __init__.py  chunker.py  dispatch.py  markdown.py  provenance.py  readability.py
tests/: conftest.py  test_action_cache.py  test_actions.py  test_adapters.py  test_agent_driver.py  test_api_providers.py  test_api_scrape.py  test_batch.py  test_browser_pool.py  test_browser_tier.py  test_config.py  test_crawl_extras.py  test_db.py  test_dedup.py  test_deepseek_adapter.py  test_dispatch.py  test_export.py  test_extract.py  test_http_tier.py  test_mapper.py  test_metadata.py  test_openai_compatible.py  test_pagination_actions.py  test_policy.py  test_proxy_pool.py  test_queue.py  test_readability.py  test_replay.py  test_router.py  test_security.py  test_server.py  test_shape.py  test_signals.py  test_snapshots.py  test_sync.py  test_watch.py  test_web.py
tests/integration/: conftest.py  test_browser_live.py
