[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapo"
version = "0.8.0"
description = "AI-native, agent-first web scraping library with deterministic replay"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Scrapo" }]
keywords = ["scraping", "crawler", "ai", "llm", "agent", "mcp", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]

dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "selectolax>=0.3.21",
    "markdownify>=0.12",
    "aiosqlite>=0.20",
    "structlog>=24.1",
    "typer>=0.12",
    "rich>=13.7",
    "anyio>=4.3",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
browser = ["playwright>=1.44", "playwright-stealth>=1.0.6"]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
gemini = ["google-genai>=0.3"]
mcp = ["mcp>=1.0"]
pdf = ["pypdf>=4.0"]
s3 = ["boto3>=1.34"]
all = [
    "playwright>=1.44",
    "playwright-stealth>=1.0.6",
    "anthropic>=0.34",
    "openai>=1.40",
    "google-genai>=0.3",
    "mcp>=1.0",
    "pypdf>=4.0",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
    "pypdf>=4.0",
    "boto3>=1.34",
    "moto[s3]>=5.0",
]

[project.urls]
Homepage = "https://github.com/vikast908/Scrapo"
Repository = "https://github.com/vikast908/Scrapo"
Changelog = "https://github.com/vikast908/Scrapo/blob/main/CHANGELOG.md"

[project.scripts]
scrapo = "scrapo.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["scrapo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "RET", "SIM", "TID"]
# E501: line length handled by formatter; S101: assert is fine in tests/invariants;
# ASYNC240: small local snapshot file I/O does not warrant trio/anyio.Path.
ignore = ["E501", "S101", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["scrapo"]
omit = ["scrapo/agent/mcp_server.py"]
